# slocator_dashapp

./: .gitignore  Dockerfile  README.md  ReportAppUIBuilder.py  ReportDataManager.py  config.py  constants.py  dash_app.py  docker-compose.yml  interactive_plots.py  mcp_client.py  pyproject.toml  report_agent.py  system_prompts.py
all_types/: response_dtypes.py
