[project]
name = "my-middle-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.12",
    "asyncpg>=0.30.0",
    "contextily>=1.6.2",
    "fastapi>=0.65.2",
    "firebase-admin>=6.9.0",
    "geopandas>=1.1.0",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-core>=0.3.40",
    "langchain-google-genai>=2.0.9",
    "mcp[cli]>=1.9.3",
    "numpy>=2.3.0",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=1.8.2",
    "pydantic-ai>=0.2.16",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.25.1",
    "rich>=14.0.0",
    "shapely>=2.1.1",
    "sse-starlette>=2.3.6",
    "stripe>=12.2.0",
    "sympy>=1.14.0",
    "uvicorn>=0.14.0",
    "websockets>=15.0.1",
    "uvicorn[standard]",
    "fuzzywuzzy[speedup]",
    "py-spy",
    "SQLAlchemy",
    "psutil>=7.0.0",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "markdown>=3.8.2",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.5",
    "langchain-openai>=0.3.30",
    "folium>=0.20.0",
    "selenium>=4.35.0",
    "arabic_reshaper",
    "python-bidi",
    "html2image",
    "debugpy",
    "pillow>=10.0.0",
    "seaborn",
]
